--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #edf0f5;
 }
 
 a {
@@ -13,4 +14,18 @@ a {
 
 * {
   box-sizing: border-box;
+}
+/* tab colors */
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  background-color: transparent !important;
+  border: none !important;
+  border-bottom: 2px solid #2c8af8 !important;
+  color: #2c8af8 !important;
+}
+.nav-tabs .nav-link {
+  color: #15171f !important;
+}
+.nav-tabs {
+  border: none !important;
 }
